test/statements/kbrady/typedIndexVarLvalue.good
typedIndexVarLvalue.chpl:4: error: illegal lvalue in assignment
