test/statements/kbrady/typedIndexVarLvalue.chpl
var A = [1, 2 ,3, 4];

for e:int(8) in A do
	e += 1;

writeln(A);
